# N42-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  update.sh
.github/workflows/: devskim.yml  lint.yml  release-mobile-sdk-android.yml  release-mobile-sdk-ios.yml  release-n42.yml  release.yml  test.yml
LICENSE/: 1
crates/alloy-genesis/src/: lib.rs
crates/ast/clique/: Cargo.toml
crates/ast/clique/src/: snapshot_test.rs
crates/ast/primitives/: Cargo.toml
crates/ast/primitives/src/: lib.rs  snapshot.rs
crates/chain-state/clique/src/: apos.rs
crates/chain-state/src/: test_utils.rs
crates/chainspec/res/genesis/: n42.json  n42_devnet.json
crates/chainspec/src/: api.rs  constants.rs  lib.rs  spec.rs
crates/clique/: Cargo.toml
crates/clique/src/: apos.rs  apos_test.rs  lib.rs
crates/consensus/auto-seal/src/: lib.rs
crates/consensus/common/src/: validation.rs
crates/consensus/consensus/: Cargo.toml
crates/consensus/consensus/src/: lib.rs  noop.rs  test_utils.rs
crates/consensus/debug-client/src/: client.rs
crates/engine/invalid-block-hooks/src/: witness.rs
crates/engine/util/src/: reorg.rs
crates/ethereum-forks/src/hardfork/: ethereum.rs
crates/ethereum-forks/src/hardforks/: ethereum.rs
crates/ethereum/evm/: Cargo.toml
crates/ethereum/node/: Cargo.toml
crates/evm/src/: state_change.rs
crates/n42/alloy-genesis/: .cargo_vcs_info.json  Cargo.toml
crates/n42/alloy-rpc-types-beacon/: .cargo_vcs_info.json  Cargo.toml
crates/n42/alloy-rpc-types-engine/: .cargo_vcs_info.json  Cargo.toml
crates/n42/clique/: Cargo.toml
crates/n42/clique/src/: apos.rs  error.rs  lib.rs  snapshot_test.rs  traits.rs  unverifiedblock.rs
crates/n42/consensus-client/: Cargo.toml
crates/n42/consensus-client/src/: activation_queue.rs  beacon.rs  lib.rs  migrate.rs  miner.rs  network.rs  storage.rs
crates/n42/consensus-client/src/subprotocol/connection/: handler.rs  mod.rs
crates/n42/consensus-client/src/subprotocol/protocol/: event.rs  handler.rs  proto.rs
crates/n42/deposit_sdk/: Cargo.toml
crates/n42/deposit_sdk/examples/: deposit_test.rs  exit_test.rs  keystore1.json  test.rs
crates/n42/deposit_sdk/src/: deposit.rs  deposit_data-1752484020.json  eip7002_contract.json  exit_contract.json  lib.rs
crates/n42/engine/: Cargo.toml
crates/n42/engine-primitives/: Cargo.toml
crates/n42/engine-primitives/src/: attributes.rs  lib.rs
crates/n42/engine-types/: Cargo.toml
crates/n42/engine-types/src/: addons.rs  attributes.rs  block.rs  consensus.rs  engine_type.rs  engine_validator.rs  evm.rs  job.rs  job_generator.rs  lib.rs  minedblock.rs  network.rs  node.rs  payload.rs  unverifiedblock.rs
crates/n42/keystore/: Cargo.toml
crates/n42/keystore/examples/: create_keystores.rs  keystore.json  keystore1.json
crates/n42/keystore/src/: blst.rs  create.rs  key.rs  keystore.rs  lib.rs  macros.rs
crates/n42/miner/: Cargo.toml
crates/n42/mobile/: Cargo.toml
crates/n42/mobile-sdk/: Cargo.toml  build-aar.sh
crates/n42/mobile-sdk/examples/: mobile-sdk-test.rs
crates/n42/mobile-sdk/ios/: build_xcframework.sh  cbindgen.toml
crates/n42/mobile-sdk/ios/Swift/: MobileSdk.swift  MobileSdkModule.swift
crates/n42/mobile-sdk/ios/include/: mobile_sdk.h
crates/n42/mobile-sdk/ios/js/: index.js
crates/n42/mobile-sdk/src/: blst_utils.rs  c_ffi.rs  deposit.json  deposit_exit.rs  jni.rs  lib.rs
crates/n42/mobile/jni/x86_64/: libmobile.so_副本
crates/n42/mobile/md/: Rust2Mobile.md
crates/n42/mobile/src/: lib.rs  libmobile.h  librust.h  main.rs
crates/n42/n42-testing/: Cargo.toml
crates/n42/n42-testing-util/: Cargo.toml
crates/n42/n42-testing-util/src/: clique_test.rs  lib.rs  snapshot_test_utils.rs
crates/n42/n42-testing-util/tests/: main.rs
crates/n42/n42-testing/src/: dev.rs  main.rs  snapshot_test_utils.rs  utils.rs
crates/n42/n42-withdrawal/: Cargo.toml
crates/n42/n42-withdrawal/compare_fields_derive/: Cargo.toml
crates/n42/n42-withdrawal/src/: beacon_block_body.rs  beacon_state.rs  chain_spec.rs  crypto.rs  error.rs  exit_cache.rs  fork_name.rs  lib.rs  macros.rs  models.rs  payload.rs  pending_partial_withdrawal.rs  per_block_processing.rs  safe_aitrh.rs  signature.rs  signature_set.rs  slashing.rs  slot_epoch.rs  validators.rs  verify_deposit.rs  verify_exit.rs  withdrawal.rs
crates/n42/n42-withdrawal/test_random_derive/: Cargo.toml
crates/n42/primitives/: Cargo.toml
crates/n42/primitives/src/: activation_queue.rs  attestation_duty.rs  beacon.rs  committee_cache.rs  lib.rs  safe_aitrh.rs  snapshot.rs  validator.rs
crates/n42/reward-punish/: Cargo.toml
crates/n42/reward-punish/src/: arith.rs  attestation.rs  attestation_data.rs  base.rs  beacon_committee.rs  beaconstate.rs  committee_cache.rs  errors.rs  fork_name.rs  get_attesting_indices.rs  lib.rs  pending_attestation.rs  per_epoch_processing.rs  relative_epoch.rs  reward.rs  reward_and_penalties.rs  shuffle_list.rs  signing_data.rs  slashings.rs  slot_data.rs  slot_epoch.rs  spec.rs  validator_statuses.rs
crates/n42/reward-punish/src/common/: balance.rs  epoch_cache.rs  epoch_processing_summary.rs  fixed_bytes.rs  mod.rs  participation_flags.rs  per_epoch_processing.rs  per_slot_processing.rs  progressive_balance_cache.rs  single_pass.rs  sync_committee.rs
crates/net/network-api/: Cargo.toml
crates/node/builder/: Cargo.toml
crates/node/core/: Cargo.toml
crates/primitives-traits/: Cargo.toml
crates/primitives-traits/src/: lib.rs
crates/primitives/src/: alloy_compat.rs  block.rs  lib.rs
crates/revm/: Cargo.toml
crates/revm/src/: cached.rs
crates/storage/db/: Cargo.toml
crates/storage/db-api/: Cargo.toml
crates/storage/libmdbx-rs/: Cargo.toml
crates/storage/provider/: Cargo.toml
crates/storage/storage-api/: Cargo.toml
crates/transaction-pool/src/: lib.rs
docs/: migrate.md  mobile-sdk.md  rpc.md
etc/: docker-compose.yml
testing/testing-utils/src/: generators.rs
tests/: e2e.sh
tests/typescript/: hardhat.config.ts  jest.config.ts  package.json
tests/typescript/test/: dummy.test.ts  jest.global-setup.ts
(+73 files in other folders)
