[workspace.package]
version = "1.1.1"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/n42blockchain/N42-rs"
repository = "https://github.com/n42blockchain/N42-rs"
exclude = [".github/"]

[workspace]
members = [
    "bin/n42/",
    "crates/n42/primitives/",
    "crates/n42/clique/",
    "crates/n42/engine-types/",
    "crates/n42/engine-primitives/",
    "crates/n42/n42-testing",
    "crates/n42/n42-testing-util",
    "crates/n42/mobile",
    "crates/engine/invalid-block-hooks/",
    "crates/evm/",
    "crates/chainspec/",
    "crates/chain-state",
    "crates/node/builder/",
    "crates/consensus/auto-seal/",
    "crates/consensus/consensus/",
    "crates/consensus/debug-client/",
    "crates/engine/util/",
    "crates/ethereum/cli/",
    "crates/ethereum/consensus",
    "crates/ethereum/payload/",
    "crates/ethereum-forks/",
    "crates/exex/exex/",
    "crates/net/peers/",
    "crates/node/core/",
    "crates/ethereum/node/",
    "crates/primitives/",
    "crates/primitives-traits/",
    "crates/rpc/rpc-eth-api/",
    "crates/rpc/rpc-types-compat/",
    "crates/storage/db/",
    "crates/storage/db-api/",
    "crates/storage/provider",
    "crates/storage/storage-api/",
    "testing/testing-utils/", 
    "crates/n42/engine-primitives", 
    "crates/n42/consensus-client",
    "crates/revm"
]
default-members = ["bin/n42"]


# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rustdoc.all = "warn"
# rust.unnameable-types = "warn"

[workspace.lints.clippy]
# These are some of clippy's nursery (i.e., experimental) lints that we like.
# By default, nursery lints are allowed. Some of the lints below have made good
# suggestions which we fixed. The others didn't have any findings, so we can
# assume they don't have that many false positives. Let's enable them to
# prevent future problems.
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_stack_frames = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
missing_const_for_fn = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
redundant_else = "warn"
single_char_pattern = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
while_float = "warn"
zero_sized_map_values = "warn"

# These are nursery lints which have findings. Allow them for now. Some are not
# quite mature enough for use in our codebase and some we don't really want.
# Explicitly listing should make it easier to fix in the future.
as_ptr_cast_mut = "allow"
cognitive_complexity = "allow"
debug_assert_with_mut_call = "allow"
fallible_impl_from = "allow"
future_not_send = "allow"
needless_collect = "allow"
non_send_fields_in_send_ty = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"
too_long_first_doc_paragraph = "allow"

# Speed up tests.
[profile.dev.package]
proptest.opt-level = 3
rand_chacha.opt-level = 3
rand_xorshift.opt-level = 3
unarray.opt-level = 3

# Meant for testing - all optimizations, but with debug assertions and overflow checks.
[profile.hivetests]
inherits = "test"
lto = "thin"
opt-level = 3

[profile.release]
codegen-units = 16
debug = "line-tables-only"
lto = "thin"
opt-level = 3
panic = "unwind"
strip = true

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
debug = 2
inherits = "release"
strip = false

# Make sure debug symbols are in the bench profile
[profile.bench]
inherits = "profiling"

[profile.maxperf]
codegen-units = 1
inherits = "release"
lto = "fat"

[profile.reproducible]
inherits = "release"
debug = false
panic = "abort"
codegen-units = 1
overflow-checks = true

[patch.'https://github.com/paradigmxyz/reth.git']
reth-chainspec = { path = "crates/chainspec" }
reth-node-builder = { path = "crates/node/builder" }
reth-primitives = { path = "crates/primitives" }
reth-primitives-traits = { path = "crates/primitives-traits" }
reth-node-core = { path = "crates/node/core" }
reth-node-ethereum = { path = "crates/ethereum/node" }
reth-provider = { path = "crates/storage/provider" }
reth-db = {path = "crates/storage/db" }
reth-ethereum-forks = { path = "crates/ethereum-forks"}
reth-ethereum-cli = { path = "crates/ethereum/cli"}
reth-ethereum-consensus = { path = "crates/ethereum/consensus"}
reth-evm = { path = "crates/evm"}
reth-invalid-block-hooks = { path = "crates/engine/invalid-block-hooks" }
reth-db-api={path = "crates/storage/db-api"}
reth-storage-api={path="crates/storage/storage-api"}
reth-rpc-types-compat={path="crates/rpc/rpc-types-compat"}
reth-ethereum-payload-builder={path="crates/ethereum/payload"}
reth-auto-seal-consensus={path="crates/consensus/auto-seal"}
reth-consensus = { path="crates/consensus/consensus"}
reth-consensus-debug-client = { path="crates/consensus/debug-client"}
reth-engine-util={path="crates/engine/util"}
reth-rpc-eth-api={path="crates/rpc/rpc-eth-api"}
reth-exex={path="crates/exex/exex"}
reth-network = { path = "crates/net/network" }
reth-network-api = { path = "crates/net/network-api" }
reth-network-peers = { path = "crates/net/peers"}
reth-testing-utils={path="testing/testing-utils"}
reth-chain-state = { path = "crates/chain-state"}
reth-revm={path="crates/revm"}

[patch.crates-io]
alloy-genesis = { path = "./crates/n42/alloy-genesis" }
alloy-rpc-types-engine = { path = "./crates/n42/alloy-rpc-types-engine" }
alloy-rpc-types-beacon = { path = "./crates/n42/alloy-rpc-types-beacon" }

[workspace.dependencies]
# for n42
n42-primitives = { path = "crates/n42/primitives" }
n42-clique = {path="crates/n42/clique"}
n42-engine-types = {path="crates/n42/engine-types"}
n42-engine-primitives = {path="crates/n42/engine-primitives"}
consensus-client = {path="crates/n42/consensus-client"}

blst = "0.3.11"
tracing-subscriber = { version = "0.3.18", features = ["default", "fmt"] }
tracing-journald = { version = "0.3.0" }

reth = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-auto-seal-consensus = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-bench = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-blockchain-tree-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-cli = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-cli-runner = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-codecs-derive = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-config = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1", default-features = false }
reth-consensus-common = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-consensus-debug-client = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-db = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1", default-features = false }
reth-db-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-db-common = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-db-models = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-discv4 = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-discv5 = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-dns-discovery = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-downloaders = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-ecies = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-engine-tree = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-engine-service = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-engine-util = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-errors = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-eth-wire-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-ethereum-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-etl = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-evm = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-optimism-evm = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-execution-errors = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-exex = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-exex-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-fs-util = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-invalid-block-hooks = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-ipc = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-libmdbx = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-mdbx-sys = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-net-banlist = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-net-nat = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-network = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-network-p2p = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1", default-features = false }
reth-network-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-nippy-jar = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-node-events = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-node-metrics = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-optimism-node = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-node-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-optimism-cli = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-optimism-consensus = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-optimism-forks = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-optimism-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-optimism-storage = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-payload-validator = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1", default-features = false, features = ["std"] }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1", default-features = false }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-prune = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-prune-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-revm = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1", default-features = false }
reth-rpc = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-rpc-api-testing-util = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-rpc-engine-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1", default-features = false }
reth-rpc-layer = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-rpc-types-compat = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-stages = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-stages-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-stages-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-static-file = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-static-file-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-tokio-util = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-trie = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }
reth-trie-parallel = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1" }

# revm
revm = { version = "17.0.0", features = ["std"], default-features = false }
revm-inspectors = "0.10.0"
revm-primitives = { version = "13.0.0", features = [
    "std",
], default-features = false }

# eth
alloy-chains = "0.1.32"
alloy-dyn-abi = "0.8.0"
alloy-primitives = { version = "0.8.9", default-features = false }
alloy-rlp = "0.3.4"
alloy-sol-types = "0.8.0"
alloy-trie = { version = "0.7", default-features = false }

alloy-consensus = { version = "0.5.4", default-features = false }
alloy-contract = { version = "0.5.4", default-features = false }
alloy-eips = { version = "0.5.4", default-features = false }
alloy-genesis = { version = "0.5.4", default-features = false }
alloy-json-rpc = { version = "0.5.4", default-features = false }
alloy-network = { version = "0.5.4", default-features = false }
alloy-network-primitives = { version = "0.5.4", default-features = false }
alloy-node-bindings = { version = "0.5.4", default-features = false }
alloy-provider = { version = "0.5.4", features = [
    "reqwest",
], default-features = false }
alloy-pubsub = { version = "0.5.4", default-features = false }
alloy-rpc-client = { version = "0.5.4", default-features = false }
alloy-rpc-types = { version = "0.5.4", features = [
    "eth",
], default-features = false }
alloy-rpc-types-admin = { version = "0.5.4", default-features = false }
alloy-rpc-types-anvil = { version = "0.5.4", default-features = false }
alloy-rpc-types-beacon = { version = "0.5.4", default-features = false }
alloy-rpc-types-debug = { version = "0.5.4", default-features = false }
alloy-rpc-types-engine = { version = "0.5.4", default-features = false }
alloy-rpc-types-eth = { version = "0.5.4", default-features = false }
alloy-rpc-types-mev = { version = "0.5.4", default-features = false }
alloy-rpc-types-trace = { version = "0.5.4", default-features = false }
alloy-rpc-types-txpool = { version = "0.5.4", default-features = false }
alloy-serde = { version = "0.5.4", default-features = false }
alloy-signer = { version = "0.5.4", default-features = false }
alloy-signer-local = { version = "0.5.4", default-features = false }
alloy-transport = { version = "0.5.4" }
alloy-transport-http = { version = "0.5.4", features = [
    "reqwest-rustls-tls",
], default-features = false }
alloy-transport-ipc = { version = "0.5.4", default-features = false }
alloy-transport-ws = { version = "0.5.4", default-features = false }

# op
op-alloy-rpc-types = "0.5"
op-alloy-rpc-types-engine = "0.5"
op-alloy-network = "0.5"
op-alloy-consensus = "0.5"

# misc
aquamarine = "0.6"
auto_impl = "1"
backon = { version = "1.2", default-features = false, features = [
    "std-blocking-sleep",
    "tokio-sleep",
] }
bincode = "1.3"
bitflags = "2.4"
boyer-moore-magiclen = "0.2.16"
bytes = "1.5"
cfg-if = "1.0"
clap = "4"
const_format = { version = "0.2.32", features = ["rust_1_64"] }
dashmap = "6.0"
derive_more = { version = "1", features = ["full"] }
dyn-clone = "1.0.17"
eyre = "0.6"
fdlimit = "0.3.0"
generic-array = "0.14"
humantime = "2.1"
humantime-serde = "1.1"
itertools = "0.13"
linked_hash_set = "0.1"
modular-bitfield = "0.11.2"
notify = { version = "6.1.1", default-features = false, features = [
    "macos_fsevent",
] }
nybbles = "0.2.1"
once_cell = { version = "1.19", default-features = false, features = [
    "critical-section",
] }
parking_lot = "0.12"
paste = "1.0"
rand = "0.8.5"
rayon = "1.7"
rustc-hash = { version = "2.0", default-features = false }
schnellru = "0.2"
serde = { version = "1.0", default-features = false }
serde_json = "1.0.94"
serde_with = "3.3.0"
sha2 = { version = "0.10", default-features = false }
shellexpand = "3.0.0"
smallvec = "1"
strum = { version = "0.26", default-features = false }
syn = "2.0"
thiserror = "1.0"
thiserror-no-std = { version = "2.0.2", default-features = false }
tracing = "0.1.0"
tracing-appender = "0.2"
url = "2.3"
zstd = "0.13"

# metrics
metrics = "0.24.0"
metrics-derive = "0.1"
metrics-exporter-prometheus = { version = "0.16.0", default-features = false }
metrics-process = "2.1.0"
metrics-util = { default-features = false, version = "0.18.0" }

# proc-macros
proc-macro2 = "1.0"
quote = "1.0"

# tokio
tokio = { version = "1.39", default-features = false }
tokio-stream = "0.1.11"
tokio-util = { version = "0.7.4", features = ["codec"] }

# async
async-stream = "0.3"
async-trait = "0.1.68"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
hyper = "1.3"
hyper-util = "0.1.5"
pin-project = "1.0.12"
reqwest = { version = "0.12", default-features = false }
tower = "0.4"
tower-http = "0.5"

# p2p
discv5 = "0.8.0"
if-addrs = "0.13"

# rpc
jsonrpsee = "0.24"
jsonrpsee-core = "0.24"
jsonrpsee-http-client = "0.24"
jsonrpsee-types = "0.24"

# http
http = "1.0"
http-body = "1.0"
jsonwebtoken = "9"
proptest-arbitrary-interop = "0.1.0"

# crypto
enr = { version = "0.12.1", default-features = false }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
secp256k1 = { version = "0.29", default-features = false, features = [
    "global-context",
    "recovery",
] }

# for eip-4844
c-kzg = "1.0.0"

# config
toml = "0.8"

# misc-testing
arbitrary = "1.3"
assert_matches = "1.5.0"
criterion = "0.5"
iai-callgrind = "0.13"
pprof = "0.13"
proptest = "1.4"
proptest-derive = "0.5"
serial_test = { default-features = false, version = "3" }
similar-asserts = { version = "1.5.0", features = ["serde"] }
tempfile = "3.8"
test-fuzz = "6"

tikv-jemalloc-ctl = "0.6"
tikv-jemallocator = "0.6"
tracy-client = "0.17.3"

lazy_static = "1.5.0"